--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fire touch events when corresponding mouse events fire",
   "main": "index.js",
   "scripts": {
-    "test": "node test"
+    "test": "node test -b"
   },
   "keywords": [
     "mouse",
